project/test/semantics/unit/good/Good13_shouldGenerateGettersForAttributes.ty
mutable class Student {
    
    values: {
        firstName: String;
        lastName: String;
        id: Int = 38493;
        grades: Grades;
    }
    
    variables: {
        age: Int;
        year: Int;
    }
}

immutable class Grades {
    
    values: {
        grade1: Int;
        grade2: Int;
        grade3: Int = 13;
        grade4: Int;
    }
    
    functions: {
        someFunction: () -> Int = {
            3 + 3
        }
    }
}

singleton class AttributeGetters {
    
    actions: {
        main: () -> Student = {
            value student: Student = Student("Diana", "Frost", Grades(11, 12, 14), 20, 2);
            student.firstName ++ " " ++ student.lastName
        }
    }
}
